--- a/systems-tab.yaml
+++ b/systems-tab.yaml
@@ -1,231 +1,222 @@
-- badges: []
-  cards:
-    - cards:
-        - cards:
-            - color_thresholds:
-                - color: "#EE82EE"
-                  value: 90
-                - color: "#800000"
-                  value: 75
-                - color: "#FF0000"
-                  value: 60
-                - color: "#FFA500"
-                  value: 50
-                - color: "#FFFF00"
-                  value: 40
-                - color: "#008000"
-                  value: 0
-              color_thresholds_transition: smooth
-              entities:
-                - entity: sensor.processor_use
-                  index: 0
-              group: false
-              hour24: true
-              line_width: 6
-              name: CPU Usage
-              points_per_hour: 1
-              show:
-                extrema: true
-                icon: true
-                labels: false
-                name: true
-                state: true
-              style: |
-                ha-card {
-                  backdrop-filter: blur(4px);
-                }
-              type: "custom:mini-graph-card"
-          type: horizontal-stack
-        - cards:
-            - color_thresholds:
-                - color: "#EE82EE"
-                  value: 90
-                - color: "#800000"
-                  value: 75
-                - color: "#FF0000"
-                  value: 60
-                - color: "#FFA500"
-                  value: 50
-                - color: "#FFFF00"
-                  value: 40
-                - color: "#008000"
-                  value: 0
-              color_thresholds_transition: smooth
-              entities:
-                - entity: sensor.memory_use_percent
-                  index: 0
-                  name: RAM
-              group: false
-              hour24: true
-              line_width: 6
-              name: RAM
-              points_per_hour: 1
-              show:
-                fill: fade
-                graph: bar
-                icon: true
-                labels: false
-                name: true
-                state: true
-              style: |
-                ha-card {
-                  backdrop-filter: blur(4px);
-                }
-              type: "custom:mini-graph-card"
-            - color_thresholds:
-                - color: "#FF0000"
-                  value: 500
-                - color: "#FFA500"
-                  value: 250
-                - color: "#008000"
-                  value: 0
-              color_thresholds_transition: hard
-              entities:
-                - entity: sensor.swap_use
-                  index: 0
-              group: false
-              hour24: true
-              line_width: 6
-              name: Swap
-              points_per_hour: 1
-              show:
-                fill: fade
-                graph: bar
-                icon: true
-                labels: false
-                name: true
-                state: true
-              style: |
-                ha-card {
-                  backdrop-filter: blur(4px);
-                }
-              type: "custom:mini-graph-card"
-          type: horizontal-stack
-        - cards:
-            - entities:
-                - entity: sensor.disk_use_home
-                  index: 0
-              group: false
-              hour24: true
-              line_color: dodgerblue
-              line_width: 6
-              name: Disk
-              points_per_hour: 1
-              show:
-                fill: fade
-                graph: bar
-                icon: true
-                labels: false
-                name: true
-                state: true
-              style: |
-                ha-card {
-                  backdrop-filter: blur(4px);
-                }
-              type: "custom:mini-graph-card"
-            - color_thresholds_transition: smooth
-              entities:
-                - entity: sensor.hass_db_size
-                  index: 0
-              group: false
-              hour24: true
-              line_color: dodgerblue
-              line_width: 6
-              name: HA DB
-              points_per_hour: 1
-              show:
-                fill: fade
-                graph: bar
-                icon: true
-                labels: false
-                name: true
-                state: true
-              style: |
-                ha-card {
-                  backdrop-filter: blur(4px);
-                }
-              type: "custom:mini-graph-card"
-          type: horizontal-stack
-      type: vertical-stack
-    - entities:
-        - entity: sensor.hacs
-          name: HACS
-        - entity: sensor.last_boot
-        - entities:
-            - entity: sensor.installed_version
-              name: Running
-              units: "%"
-            - entity: sensor.latest_available_version
-              name: Latest
-          entity: sensor.installed_version
-          icon: "mdi:home-assistant"
-          name: HA Version
-          show_state: false
-          type: "custom:multiple-entity-row"
-        - entity: input_select.default_log_level
-        - entity: input_select.notify_select
-      show_header_toggle: false
-      style: |
-        ha-card {
-          backdrop-filter: blur(4px);
-        }
-      type: entities
-    - columns: 4
-      entities:
-        - entity: sensor.count_automations
-          name: Auto
-        - entity: sensor.count_scripts
-          name: Scripts
-        - entity: sensor.count_sensors
-          name: Sensors
-        - entity: sensor.count_switches
-          name: Switches
-        - entity: sensor.count_lights
-          name: Lights
-        - entity: sensor.count_fans
-          name: Fans
-        - entity: sensor.count_zwave
-          name: Zwave
-      style: |
-        ha-card {
-          backdrop-filter: blur(4px);
-        }
-      type: glance
-    - cards:
-        - cards:
-            - entity: script.upgrade_system
-              style: |
-                ha-card {
-                  backdrop-filter: blur(4px);
-                }
-              tap_action:
-                action: call-service
-                service: script.turn_on
-                service_data:
-                  entity_id: script.upgrade_system
-              type: entity-button
-            - entity: script.restart_system
-              style: |
-                ha-card {
-                  backdrop-filter: blur(4px);
-                }
-              tap_action:
-                action: call-service
-                service: script.turn_on
-                service_data:
-                  entity_id: script.restart_system
-              type: entity-button
-            - entity: input_boolean.refresh_counts
-              style: |
-                ha-card {
-                  backdrop-filter: blur(4px);
-                }
-              tap_action:
-                action: toggle
-              type: entity-button
-          type: horizontal-stack
-      type: vertical-stack
-  icon: "mdi:desktop-classic"
-  id: system
-  path: systemstats
-  title: System Stats
+  - badges: []
+    cards:
+      - cards:
+          - cards:
+              - template: usage_graph_line_template
+                type: custom:decluttering-card
+                variables:
+                  - title: CPU Usage
+                  - entity: sensor.processor_use
+            type: horizontal-stack
+          - cards:
+              - template: usage_graph_column_template
+                type: custom:decluttering-card
+                variables:
+                  - title: RAM Usage
+                  - entity: sensor.memory_use_percent
+              - type: custom:apexcharts-card
+                graph_span: 24h
+                experimental:
+                  color_threshold: true
+                header:
+                  show: true
+                  title: Swap Usage
+                series:
+                  - entity: sensor.swap_use
+                    type: area
+                    name: Swap
+                    stroke_width: 0
+                    show:
+                      extremas: false
+                    color_threshold:
+                      - color: '#FF0000'
+                        value: 500
+                      - color: '#FFA500'
+                        value: 250
+                      - color: '#008000'
+                        value: 0
+                    group_by:
+                      func: avg
+                      duration: 1hr
+            type: horizontal-stack
+          - cards:
+              - template: usage_graph_column_2_template
+                type: custom:decluttering-card
+                variables:
+                  - title: Disk (in GB)
+                  - entity: sensor.disk_use_home
+              - template: usage_graph_column_2_template
+                type: custom:decluttering-card
+                variables:
+                  - title: HA DB (in MB)
+                  - entity: sensor.hass_db_size
+            type: horizontal-stack
+        type: vertical-stack
+      - type: vertical-stack
+        cards:
+          - entities:
+              - entity: sensor.last_boot
+              - entities:
+                  - entity: sensor.installed_version
+                    name: Running
+                    units: '%'
+                  - entity: sensor.latest_available_version
+                    name: Latest
+                entity: sensor.installed_version
+                icon: mdi:home-assistant
+                name: HA Version (Release)
+                show_state: false
+                type: custom:multiple-entity-row
+              - entity: sensor.latest_available_beta
+                icon: hass:beta
+              - entity: sensor.cert_expiry_timestamp_[REDACTED]
+                name: SSL Cert Expires (FreeDNS)
+              - entity: sensor.cert_expiry_timestamp_[REDACTED]
+                name: SSL Cert Expires (New Domain)
+              - entity: input_select.default_log_level
+              - entity: input_select.notify_select
+            show_header_toggle: false
+            type: entities
+          - type: grid
+            cards:
+              - type: custom:mushroom-entity-card
+                entity: sensor.count_automations
+                primary_info: state
+                secondary_info: none
+                fill_container: false
+                tap_action:
+                  action: more-info
+                hold_action:
+                  action: none
+                double_tap_action:
+                  action: none
+                icon_color: grey
+              - type: custom:mushroom-entity-card
+                entity: sensor.count_scripts
+                primary_info: state
+                secondary_info: none
+                fill_container: false
+                icon_color: grey
+              - type: custom:mushroom-entity-card
+                entity: sensor.count_sensors
+                primary_info: state
+                secondary_info: none
+              - type: custom:mushroom-entity-card
+                entity: sensor.count_switches
+                primary_info: state
+                secondary_info: none
+                tap_action:
+                  action: more-info
+                hold_action:
+                  action: none
+                double_tap_action:
+                  action: none
+              - type: custom:mushroom-entity-card
+                entity: sensor.count_lights
+                primary_info: state
+                secondary_info: none
+                tap_action:
+                  action: more-info
+                hold_action:
+                  action: none
+                double_tap_action:
+                  action: none
+              - type: custom:mushroom-entity-card
+                entity: sensor.count_fans
+                primary_info: state
+                secondary_info: none
+                tap_action:
+                  action: more-info
+                hold_action:
+                  action: none
+                double_tap_action:
+                  action: none
+              - type: custom:mushroom-entity-card
+                entity: sensor.count_zwave
+                primary_info: state
+                secondary_info: name
+                name: Zwave Nodes
+                tap_action:
+                  action: more-info
+                hold_action:
+                  action: none
+                double_tap_action:
+                  action: none
+                icon_color: green
+              - type: custom:mushroom-entity-card
+                entity: sensor.count_unavailable
+                icon: mdi:alert-octagram
+                primary_info: state
+                secondary_info: name
+                name: Unavailable
+                tap_action:
+                  action: more-info
+                hold_action:
+                  action: none
+                double_tap_action:
+                  action: none
+                icon_color: red
+            square: false
+            columns: 2
+      - type: vertical-stack
+        cards:
+          - entitypart: dockerhost4_home_assistant
+            logo: /local/systemicons/homeassistant.png
+            name: Home Assistant Prod Container
+            type: custom:docker-card
+          - entitypart: dockerhost4_home_assistant_beta
+            logo: /local/systemicons/homeassistant.png
+            name: Home Assistant Beta Container
+            type: custom:docker-card
+      - cards:
+          - cards:
+              - show_name: true
+                show_icon: true
+                entity: script.upgrade_system
+                tap_action:
+                  action: call-service
+                  service: script.turn_on
+                  service_data:
+                    entity_id: script.upgrade_system
+                type: entity-button
+                name: Update Image
+                icon: mdi:cloud-download
+              - entity: script.restart_system
+                tap_action:
+                  action: call-service
+                  service: script.turn_on
+                  service_data:
+                    entity_id: script.restart_system
+                type: entity-button
+                name: Restart Container
+                icon: mdi:restart
+              - show_name: true
+                show_icon: true
+                type: button
+                tap_action:
+                  action: call-service
+                  service: backup.create
+                  data: {}
+                  target: {}
+                name: Manual Backup
+                icon: mdi:cloud-upload
+                hold_action:
+                  action: none
+            type: horizontal-stack
+          - show_name: true
+            show_icon: true
+            type: button
+            tap_action:
+              action: navigate
+              navigation_path: /lovelace-admin/r620
+            name: R620 iDrac
+            icon: mdi:server-network
+            show_state: false
+            icon_height: 100px
+            hold_action:
+              action: none
+        type: vertical-stack
+    icon: mdi:desktop-classic
+    id: system
+    path: systemstats
+    title: System Stats
